[gd_scene load_steps=16 format=3 uid="uid://bc860nd1eam74"]

[ext_resource type="Script" path="res://scenes/Pause/Pause Menu.gd" id="1_oe8to"]
[ext_resource type="Texture2D" uid="uid://wl6ieovx1eiu" path="res://art/UI/pausemenu.png" id="2_1em3x"]
[ext_resource type="Texture2D" uid="uid://cpr77lpg7ktro" path="res://art/UI/Resumebutton2.png" id="3_oh0kn"]
[ext_resource type="Texture2D" uid="uid://bekgqtkvt6fkm" path="res://art/UI/Resumebutton3.png" id="4_v11sn"]
[ext_resource type="Texture2D" uid="uid://c7v8jda1b3ihs" path="res://art/UI/Resumebutton1.png" id="5_do6s3"]
[ext_resource type="Texture2D" uid="uid://do2bfdaoeia6o" path="res://art/UI/optionbutton2.png" id="6_0vhx3"]
[ext_resource type="Texture2D" uid="uid://b0hy3ir65cyuk" path="res://art/UI/optionbutton3.png" id="7_0w8i2"]
[ext_resource type="Texture2D" uid="uid://dpertvah2qcci" path="res://art/UI/optionbutton1.png" id="8_5qokt"]
[ext_resource type="Texture2D" uid="uid://pljeniyj2w3r" path="res://art/UI/menubutton2.png" id="9_2utbu"]
[ext_resource type="Texture2D" uid="uid://wfe4kn3ljlr1" path="res://art/UI/menubutton3.png" id="10_hy15t"]
[ext_resource type="Texture2D" uid="uid://cmdwd6gmg6syx" path="res://art/UI/menubutton1.png" id="11_xgop6"]
[ext_resource type="Texture2D" uid="uid://bsm240yhmq5xb" path="res://art/UI/exitbutton2.png" id="12_ax8qi"]
[ext_resource type="Texture2D" uid="uid://ds088778y6r87" path="res://art/UI/exitbutton3.png" id="13_4mduj"]
[ext_resource type="Texture2D" uid="uid://ca6cjq06x7put" path="res://art/UI/exitbutton1.png" id="14_o8rtc"]
[ext_resource type="PackedScene" uid="uid://bpugmbxjrfcqq" path="res://scenes/Options/options_screen.tscn" id="15_kaxj3"]

[node name="Pause Menu" type="CanvasLayer" node_paths=PackedStringArray("options_screen")]
process_mode = 3
visible = false
script = ExtResource("1_oe8to")
options_screen = NodePath("Options_Screen")

[node name="overlay" type="ColorRect" parent="."]
offset_right = 322.0
offset_bottom = 181.0
color = Color(0.141176, 0.141176, 0.141176, 0.466667)

[node name="TextureRect" type="TextureRect" parent="overlay"]
layout_mode = 0
offset_left = 115.0
offset_top = 50.0
offset_right = 199.0
offset_bottom = 134.0
texture = ExtResource("2_1em3x")

[node name="VBoxContainer" type="VBoxContainer" parent="overlay/TextureRect"]
layout_mode = 0
offset_left = 26.0
offset_top = 4.0
offset_right = 58.0
offset_bottom = 80.0
alignment = 1

[node name="ResumeButton" type="TextureButton" parent="overlay/TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
texture_normal = ExtResource("3_oh0kn")
texture_pressed = ExtResource("4_v11sn")
texture_hover = ExtResource("5_do6s3")
texture_focused = ExtResource("5_do6s3")

[node name="OptionsButton" type="TextureButton" parent="overlay/TextureRect/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../MenuButton")
texture_normal = ExtResource("6_0vhx3")
texture_pressed = ExtResource("7_0w8i2")
texture_hover = ExtResource("8_5qokt")
texture_focused = ExtResource("8_5qokt")

[node name="MenuButton" type="TextureButton" parent="overlay/TextureRect/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../ExitButton")
texture_normal = ExtResource("9_2utbu")
texture_pressed = ExtResource("10_hy15t")
texture_hover = ExtResource("11_xgop6")
texture_focused = ExtResource("11_xgop6")

[node name="ExitButton" type="TextureButton" parent="overlay/TextureRect/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MenuButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
texture_normal = ExtResource("12_ax8qi")
texture_pressed = ExtResource("13_4mduj")
texture_hover = ExtResource("14_o8rtc")
texture_focused = ExtResource("14_o8rtc")

[node name="Options_Screen" parent="." instance=ExtResource("15_kaxj3")]
process_mode = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_down" from="overlay/TextureRect/VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_down"]
[connection signal="button_down" from="overlay/TextureRect/VBoxContainer/OptionsButton" to="." method="_on_options_button_button_down"]
[connection signal="button_down" from="overlay/TextureRect/VBoxContainer/MenuButton" to="." method="_on_menu_button_button_down"]
[connection signal="button_down" from="overlay/TextureRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_down"]
